--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        probando a las 12 de la noche
+        probando a las 01:30 de la madrugada
     </p>
     cuerpo de la pagina
 </body>
